# noprop-benchmark

./: .gitignore  README.md  noprop_vs_backprop.py  noprop_vs_backprop_numba.py  noprop_vs_backprop_parallel.py  noprop_vs_backprop_parallel_no_prop.py  pyproject.toml  utils.py
